# ChangeLog for app-dicts/myspell-cy
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/myspell-cy/ChangeLog,v 1.5 2006/07/08 23:42:41 pylon Exp $

  08 Jul 2006; Lars Weiler <pylon@gentoo.org> myspell-cy-20060316.ebuild:
  Stable on ppc.

  23 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  myspell-cy-20060316.ebuild:
  Stable on sparc

  22 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  myspell-cy-20060316.ebuild:
  Stick a ~sparc in

  19 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  myspell-cy-20060316.ebuild:
  Add ~x86-fbsd and ~amd64 keywords.

*myspell-cy-20060316 (01 May 2006)

  01 May 2006; Kevin F. Quinn <kevquinn@gentoo.org> +metadata.xml,
  +myspell-cy-20060316.ebuild:
  New ebuild for Welsh myspell dictionary
